2009-11-20 Jens Thoms Toerring    <jt@toerring.de>

	* lib/positioner lib/include/positioner.h: Added a new
	type of positioner (FL_INVISIBLE_POSITIONER) that's
	completely invisible to put on top of other objects.
	The idea for that came from Werner Heisch.

	* fdesign/fd_superspec.c: Werner Heisch found that changing
	copied menu and choice object entries also change the ones
	of the object copied from. Bug hopefully fixed.

	* lib/fselect.c: When entering text into the input object
	of a file selector now a fitting file/directory (if one
	exists) will now be selected automatically in the browser.

2009-11-03 Jens Thoms Toerring    <jt@toerring.de>

	lib/xyplot.c: As Jussi Elorante noticed posthandlers
	didn't work with XYPLOT objects. This now should be
	fixed.

	Peter S. Galbraith pointed out that building the documen-
	tation in info format didn't work properly.

2009-09-21 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_forms.c, fdesign/fd_groups.c,
	fdesign/fd_super.c: Two bugs in fdesign, found
	by Werner Heisch, removed.

2009-09-20 Jens Thoms Toerring    <jt@toerring.de>

	Minor corrections in the documentation.

2009-09-16 Jens Thoms Toerring    <jt@toerring.de>

	* lib/include/Basic.h: Removed a nonexistent color
	that had made it into the list of colors as Werner
	Heisch pointed out.

2009-09-15 Jens Thoms Toerring    <jt@toerring.de>

	* lib/events.c: general callbacks for events for user
	generated windows weren't called anymore, repaired.
	* lib/include/xpopup.h: Broken define Rouben Rostamian
	found for the fl_setpup_default_checkcolor() repaired.

2009-09-14 Jens Thoms Toerring    <jt@toerring.de>

	* lib/thumwheel.c, lib/validator.c: Fixed return
	behaviour of thumbwheel.

2009-09-13 Jens Thoms Toerring    <jt@toerring.de>

	* lib/input.c: Further problems with beep and
	input objects removed.

2009-09-12 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/sp_spinner.c: Added forgotten output to